--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "nodemon": "^1.11.0",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
+    "path-parser": "^2.0.2",
     "prettier": "^1.6.1",
+    "sendgrid": "^5.2.3",
     "stripe": "^4.24.1"
   }
 }
