--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "dev": "concurrently \"npm run server\" \"npm run client\" \"npm run webhook\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+    "webhook": "forever sendgrid_webhook.js"
   },
   "engines": {
     "node": "8.4.0",
@@ -21,6 +22,7 @@
     "concurrently": "^3.5.0",
     "cookie-session": "^1.3.1",
     "express": "^4.15.4",
+    "localtunnel": "^1.8.3",
     "mongoose": "^4.11.9",
     "nodemon": "^1.11.0",
     "passport": "^0.4.0",
@@ -29,5 +31,8 @@
     "prettier": "^1.6.1",
     "sendgrid": "^5.2.3",
     "stripe": "^4.24.1"
+  },
+  "devDependencies": {
+    "forever": "^0.15.3"
   }
 }
